--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c09a1485",
+   "id": "c53d0f5e",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d337c83",
+   "id": "bd740513",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07c0f7ea",
+   "id": "c7d0171d",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c49869c",
+   "id": "924ed5a9",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f9f4570",
+   "id": "590259b5",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1eb7cd89",
+   "id": "2c8a2ceb",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "22379c17",
+   "id": "7bcfe8ce",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:44:37.452829Z",
-     "iopub.status.busy": "2025-01-30T11:44:37.452651Z",
-     "iopub.status.idle": "2025-01-30T11:44:40.547072Z",
-     "shell.execute_reply": "2025-01-30T11:44:40.546552Z"
+     "iopub.execute_input": "2025-01-30T12:08:33.620443Z",
+     "iopub.status.busy": "2025-01-30T12:08:33.620219Z",
+     "iopub.status.idle": "2025-01-30T12:08:37.113750Z",
+     "shell.execute_reply": "2025-01-30T12:08:37.113114Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04e8e67a",
+   "id": "77b3407b",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfee2cc4",
+   "id": "4a45598b",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d66dc02",
+   "id": "febb3ea7",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e596c95",
+   "id": "7bdad613",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75999aa7",
+   "id": "ca45645a",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3059ada",
+   "id": "390642ac",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0444e30a",
+   "id": "deb4af0e",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86b32033",
+   "id": "ebd4a315",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "5f211f29",
+   "id": "5213ecef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:44:40.549141Z",
-     "iopub.status.busy": "2025-01-30T11:44:40.548884Z",
-     "iopub.status.idle": "2025-01-30T11:44:42.437485Z",
-     "shell.execute_reply": "2025-01-30T11:44:42.436921Z"
+     "iopub.execute_input": "2025-01-30T12:08:37.116178Z",
+     "iopub.status.busy": "2025-01-30T12:08:37.115718Z",
+     "iopub.status.idle": "2025-01-30T12:08:39.333615Z",
+     "shell.execute_reply": "2025-01-30T12:08:39.333037Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1f46699",
+   "id": "33b8b4e5",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "054db495",
+   "id": "26bd4bbe",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:44:42.439735Z",
-     "iopub.status.busy": "2025-01-30T11:44:42.439228Z",
-     "iopub.status.idle": "2025-01-30T11:44:42.442815Z",
-     "shell.execute_reply": "2025-01-30T11:44:42.442262Z"
+     "iopub.execute_input": "2025-01-30T12:08:39.335654Z",
+     "iopub.status.busy": "2025-01-30T12:08:39.335294Z",
+     "iopub.status.idle": "2025-01-30T12:08:39.338964Z",
+     "shell.execute_reply": "2025-01-30T12:08:39.338396Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e241bf4",
+   "id": "760f2f3d",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80255bef",
+   "id": "d57eaec7",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf5734e6",
+   "id": "70e3db9e",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6b39593",
+   "id": "d5b3a452",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "894a2188",
+   "id": "341950c5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:44:42.444914Z",
-     "iopub.status.busy": "2025-01-30T11:44:42.444383Z",
-     "iopub.status.idle": "2025-01-30T11:44:42.487845Z",
-     "shell.execute_reply": "2025-01-30T11:44:42.487257Z"
+     "iopub.execute_input": "2025-01-30T12:08:39.341134Z",
+     "iopub.status.busy": "2025-01-30T12:08:39.340756Z",
+     "iopub.status.idle": "2025-01-30T12:08:39.388353Z",
+     "shell.execute_reply": "2025-01-30T12:08:39.387696Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fb9716d",
+   "id": "5f0bb9bd",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dc73b380",
+   "id": "525d8483",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:44:42.489768Z",
-     "iopub.status.busy": "2025-01-30T11:44:42.489409Z",
-     "iopub.status.idle": "2025-01-30T11:44:42.559213Z",
-     "shell.execute_reply": "2025-01-30T11:44:42.558627Z"
+     "iopub.execute_input": "2025-01-30T12:08:39.390570Z",
+     "iopub.status.busy": "2025-01-30T12:08:39.390063Z",
+     "iopub.status.idle": "2025-01-30T12:08:39.466748Z",
+     "shell.execute_reply": "2025-01-30T12:08:39.466219Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f992202b",
+   "id": "452584e8",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee28d0a9",
+   "id": "b047211d",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "118c62df",
+   "id": "37649747",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:44:42.561218Z",
-     "iopub.status.busy": "2025-01-30T11:44:42.560797Z",
-     "iopub.status.idle": "2025-01-30T11:44:42.587367Z",
-     "shell.execute_reply": "2025-01-30T11:44:42.586874Z"
+     "iopub.execute_input": "2025-01-30T12:08:39.468758Z",
+     "iopub.status.busy": "2025-01-30T12:08:39.468375Z",
+     "iopub.status.idle": "2025-01-30T12:08:39.499147Z",
+     "shell.execute_reply": "2025-01-30T12:08:39.498641Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2ce09b8",
+   "id": "3bb1c14c",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c95d3ec",
+   "id": "9a71f157",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79a045c4",
+   "id": "2aaaac11",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "792e30e6",
+   "id": "9302460c",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eca3deca",
+   "id": "d219c00d",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2933c216",
+   "id": "d9414dd3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:44:42.589190Z",
-     "iopub.status.busy": "2025-01-30T11:44:42.589008Z",
-     "iopub.status.idle": "2025-01-30T11:44:42.593173Z",
-     "shell.execute_reply": "2025-01-30T11:44:42.592543Z"
+     "iopub.execute_input": "2025-01-30T12:08:39.501455Z",
+     "iopub.status.busy": "2025-01-30T12:08:39.500959Z",
+     "iopub.status.idle": "2025-01-30T12:08:39.505259Z",
+     "shell.execute_reply": "2025-01-30T12:08:39.504639Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92266b08",
+   "id": "d38a34e0",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ca506d25",
+   "id": "068060cc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:44:42.594727Z",
-     "iopub.status.busy": "2025-01-30T11:44:42.594537Z",
-     "iopub.status.idle": "2025-01-30T11:44:42.597410Z",
-     "shell.execute_reply": "2025-01-30T11:44:42.596857Z"
+     "iopub.execute_input": "2025-01-30T12:08:39.507311Z",
+     "iopub.status.busy": "2025-01-30T12:08:39.506863Z",
+     "iopub.status.idle": "2025-01-30T12:08:39.509995Z",
+     "shell.execute_reply": "2025-01-30T12:08:39.509424Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b04b6bd6",
+   "id": "95bd1f34",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "08af3cc8",
+   "id": "cff304dc",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:44:42.599195Z",
-     "iopub.status.busy": "2025-01-30T11:44:42.598879Z",
-     "iopub.status.idle": "2025-01-30T11:44:45.167317Z",
-     "shell.execute_reply": "2025-01-30T11:44:45.166766Z"
+     "iopub.execute_input": "2025-01-30T12:08:39.511928Z",
+     "iopub.status.busy": "2025-01-30T12:08:39.511565Z",
+     "iopub.status.idle": "2025-01-30T12:08:42.228059Z",
+     "shell.execute_reply": "2025-01-30T12:08:42.227313Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fe390d2b",
+   "id": "8301fa58",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eae2e4e8",
+   "id": "6eb4ad61",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37ae2d78",
+   "id": "8f35cddb",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4528f593",
+   "id": "69ec766c",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "31618bb6",
+   "id": "7e9fd401",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:44:45.169378Z",
-     "iopub.status.busy": "2025-01-30T11:44:45.169010Z",
-     "iopub.status.idle": "2025-01-30T11:44:45.172278Z",
-     "shell.execute_reply": "2025-01-30T11:44:45.171703Z"
+     "iopub.execute_input": "2025-01-30T12:08:42.230298Z",
+     "iopub.status.busy": "2025-01-30T12:08:42.230041Z",
+     "iopub.status.idle": "2025-01-30T12:08:42.233749Z",
+     "shell.execute_reply": "2025-01-30T12:08:42.233159Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fd03aecfa60>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fbe216c45e0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2587b984",
+   "id": "ec90519a",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "753ae78a",
+   "id": "5068b86a",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cbef9700",
+   "id": "12a6b068",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d4cd3fe",
+   "id": "b73e1786",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f375caeb",
+   "id": "72edd559",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:44:45.174109Z",
-     "iopub.status.busy": "2025-01-30T11:44:45.173768Z",
-     "iopub.status.idle": "2025-01-30T11:44:45.176890Z",
-     "shell.execute_reply": "2025-01-30T11:44:45.176329Z"
+     "iopub.execute_input": "2025-01-30T12:08:42.235668Z",
+     "iopub.status.busy": "2025-01-30T12:08:42.235307Z",
+     "iopub.status.idle": "2025-01-30T12:08:42.238536Z",
+     "shell.execute_reply": "2025-01-30T12:08:42.238018Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "3fd0d024",
+   "id": "b7fc3658",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T11:44:45.178677Z",
-     "iopub.status.busy": "2025-01-30T11:44:45.178325Z",
-     "iopub.status.idle": "2025-01-30T11:44:46.230109Z",
-     "shell.execute_reply": "2025-01-30T11:44:46.229535Z"
+     "iopub.execute_input": "2025-01-30T12:08:42.240458Z",
+     "iopub.status.busy": "2025-01-30T12:08:42.239985Z",
+     "iopub.status.idle": "2025-01-30T12:08:43.336042Z",
+     "shell.execute_reply": "2025-01-30T12:08:43.335486Z"
     }
    },
    "outputs": [
